logs/django-bootstrap-crud.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bootstrap_crud'...
Listing './lib/python3.5/site-packages/bootstrap_crud/celldesigner'...
Listing './lib/python3.5/site-packages/bootstrap_crud/static'...
Listing './lib/python3.5/site-packages/bootstrap_crud/static/css'...
Listing './lib/python3.5/site-packages/bootstrap_crud/templates'...
Listing './lib/python3.5/site-packages/bootstrap_crud/templates/celldesigner'...
Listing './lib/python3.5/site-packages/bootstrap_crud/templates/crud'...
Listing './lib/python3.5/site-packages/bootstrap_crud/templatetags'...
Compiling './lib/python3.5/site-packages/bootstrap_crud/templatetags/crud_renderer.py'...
***   File "./lib/python3.5/site-packages/bootstrap_crud/templatetags/crud_renderer.py", line 208
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bootstrap_crud-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
